--- a/views/formCreationLogin.html
+++ b/views/formCreationLogin.html
@@ -15,13 +15,13 @@
 	<tr>
 		<td>Password</td>
 		<td>:</td>
-		<td><input name="logpassword" type="text" id="logpassword"></td>
+		<td><input name="logpassword" type="password" id="logpassword"></td>
 	</tr>
 
 	<tr>
 		<td>Confirmation Password</td>
 		<td>:</td>
-		<td><input name="confirmpassword" type="text" id="confirmpassword"></td>
+		<td><input name="confirmpassword" type="password" id="confirmpassword"></td>
 	</tr>
 
 
