--- a/views/formLogin.html
+++ b/views/formLogin.html
@@ -14,7 +14,7 @@
 	<tr>
 		<td>Password</td>
 		<td>:</td>
-		<td><input name="password" type="text" id="password"></td>
+		<td><input name="password" type="password" id="password"></td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
