--- a/views/sujet.html
+++ b/views/sujet.html
@@ -1,1 +1,1 @@
-<li attrsujet="<?php echo $i;?>"> <?php echo "Sujet".$i;?> </li>
+<li attrsujet="<?php echo $listSujet[$i]->getId();?>" attrtheme="<?php echo $theme->getId(); ?>"> <?php echo $listSujet[$i]->getTitre();?> </li>
