--- a/views/themes.html
+++ b/views/themes.html
@@ -1,3 +1,3 @@
 
-<li attrid="<?php echo $i;?>"> <?php echo "Themes".$i;?> </li>
+<li attrid="<?php echo $listTheme[$i]->getId();?>"> <?php echo $listTheme[$i]->getName();?> </li>
 
