--- a/views/headpost.html
+++ b/views/headpost.html
@@ -1,5 +1,3 @@
-<p>
-	
-	Les posts
-
-	<ul id="post">
+<section class="liste">
+	<h2 class="titresujet"><?php echo $titre; ?></h2>
+		<ul id="post">
