--- a/sources/style.css
+++ b/sources/style.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
-
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
+*/
 /*STYLE GLOBAL*/
 
 body{
@@ -64,23 +64,59 @@ header h4{
 	font-style:italic;
 	font-weight: normal;
 	line-height: 1.5em;
-
+	margin-bottom: 1.5%;
 }
 
 #zonemodif{
 	width: 55%;
 }
 
+/*NAVIGATION ENTRE THEME */
+
+#themesection{
+	width: 75%;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#themesection li{
+	padding: 1% 1.2%;
+	border-radius: 10px;
+	display: inline-block;
+	background: #DE1B62;
+	color: #fff;
+	font-weight: bold;
+}
+
+#themesection li:hover{
+	background: #fff;
+	color:#DE1B62;
+	cursor: pointer;
+}
+
+#themesection li+li{
+	margin-left: 3%;
+}
 
 /*MENU DE CONNEXION*/
 
 .connect{
+	width: 25%;
+	display: inline-block;
 	text-align: right;
+	vertical-align: middle;
 }
 
 .connect li{
-	display: inline-block;
 	font-weight: bold;
+	font-size: 0.8em;
+	display: inline-block;
+}
+
+.connect li:hover{
+	color:#DE1B62;
+	cursor: pointer;
+	text-decoration: underline;
 }
 
 .connect li+li{
@@ -156,7 +192,83 @@ aside{
 	width: 33%;
 }
 
+#contenu>h3{
+	text-transform: uppercase;
+	font-weight: bold;
+	padding-bottom: 1%; 
+	border-bottom:2px solid #DE1B62;
+	margin-bottom: 2%;
+}
+
+/*LISTE DES SUJETS*/
+
+#sujet li{
+	background-image: url('images/icons/heart_pink.png');
+	background-position:1% 50%;
+	background-repeat: no-repeat;
+	background-color: rgba(255,255,255,0.8);
+	background-size: contain;
+	padding:1% 0 1% 7%;
+	border-radius: 10px; 
+	margin-bottom: 2%;
+	box-shadow: 1px 1px 5px #DE1B62;
+}
+
+#sujet li:hover{
+	cursor:pointer;
+	background-color:rgba(222,27,98,0.8);
+	color: #fff;
+	box-shadow: 1px 1px 5px #fff;	
+}
+
+/*LISTE DES POSTS*/
+
+.meta,
+.post-text{
+	display: inline-block;
+	vertical-align: top;
+}
+
+.meta{
+	width: 25%;
+}
+
+.author{
+	font-weight: bold;
+}
+
+.post-text{
+	width: 75%;
+}
+
+.titresujet{
+	margin-bottom: 1%;
+	background-color: rgba(222,27,98,0.8);
+	color: #fff;
+	padding: 2%;
+	border-radius: 10px 10px 0 0;
+}
+
+.titresujet:before{
+	content:"Sujet : ";
+}
+
+#post{
+	background: rgba(255,255,255,0.8);	margin-bottom: 2%;
+}
+
+#post li{
+	font-size: 0.9em;
+	padding: 1%;
+	margin-bottom: 1%;
+	background: rgba(196,196,194,0.2);	
+}
+
 /*ASIDE*/
+
+aside{
+	width: 33%;
+}
 
 aside h3{
 	margin-bottom: 5%;
