--- a/views/content.html
+++ b/views/content.html
@@ -1,6 +1,6 @@
 <div id="global-container">
 	<header>
-		<h1>Le forum du Docteur Love</h1><!-- 
+		<h1><a href="index.php">Le forum du Docteur Love</a></h1><!-- 
 		
 	 --><div id="zonemodif"></div>
 	 	<h4>Des questions, des envies, une peine de coeur ?<br>
