--- a/views/content.html
+++ b/views/content.html
@@ -2,7 +2,7 @@
 	<header>
 		<h1><a href="index.php">Le forum du Docteur Love</a></h1><!-- 
 		
-	 --><div id="zonemodif"></div>
+	 --><div id="zonemodif"><?php include "controllers/avatar.php"; ?></div>
 	 	<h4>Des questions, des envies, une peine de coeur ?<br>
 	 		Viens voir le docteur !</h4>
 
