--- a/views/headpost.html
+++ b/views/headpost.html
@@ -1,3 +1,13 @@
 <section class="liste">
 	<h2 class="titresujet"><?php echo $titre; ?></h2>
+	<div class="subjectcontent">
+		<div class="meta">
+			<span class="author"></span>
+			<br>
+			<span class="postdate"></span>		
+		</div><!-- 
+	 --><div class="post-text">	
+	 		<?php echo $contenu; ?>
+		</div>
+	</div>
 		<ul id="post">
