--- a/views/postForm.html
+++ b/views/postForm.html
@@ -1,10 +1,10 @@
-<p>Nouveau Message</p>
+<p class="newresponse">R&eacute;pondre</p>
 <form id="newpost" method="post" action="controllers/formulaire.php?newpost">
 
 	<input name="iduser" type="hidden" id="iduser">
 	<input name="idsujet" type="hidden" id="idtsujet">
-	<textarea name="message" id="message" placeholder="Tapez votre r&eacute;ponse"></textarea>
-	<button type="submit" name="envoyer2" id="envoyer2">Envoyer !</button>
 
+	<textarea name="message" id="message" placeholder="Tapez ici votre r&eacute;ponse"></textarea>
+	<button type="submit" name="envoyer2" id="envoyer2">Envoyer !</button>
 
 </form>
