--- a/views/postForm.html
+++ b/views/postForm.html
@@ -1,8 +1,8 @@
 <p class="newresponse">R&eacute;pondre</p>
 <form id="newpost" method="post" action="controllers/formulaire.php?newpost">
-
-	<input name="iduser" type="hidden" id="iduser">
-	<input name="idsujet" type="hidden" id="idtsujet">
+	
+	<input name="idsujet" type="hidden" id="idsujet" value="<?php echo $id ;?> ">
+	<input name="idtheme2" type="hidden" id="idtheme2" value="<?php echo $idtheme ;?> ">
 
 	<textarea name="message" id="message" placeholder="Tapez ici votre r&eacute;ponse"></textarea>
 	<button type="submit" name="envoyer2" id="envoyer2">Envoyer !</button>
