--- a/views/content.html
+++ b/views/content.html
@@ -10,9 +10,7 @@
 				<?php include "controllers/themes.php"; ?>
 		</nav><!-- 
 	 --><ul class="connect">
-			<li id="login">Connexion</li>
-			<li id="inscription">Inscription</li>
-			<li id="logout">Logout</li>
+			<?php include "controllers/log_menu.php"; ?>
 		</ul>
 	</header>
 	
