--- a/views/headpost.html
+++ b/views/headpost.html
@@ -2,12 +2,16 @@
 	<h2 class="titresujet"><?php echo $titre; ?></h2>
 	<div class="subjectcontent">
 		<div class="meta">
-			<span class="author"></span>
+			<span class="author">
+				<?php echo $author; ?>
+			</span>
 			<br>
-			<span class="postdate"></span>		
+			<span class="postdate">
+				<?php echo $date; ?>
+			</span>		
 		</div><!-- 
-	 --><div class="post-text">	
+	 --><p class="post-text">	
 	 		<?php echo $contenu; ?>
-		</div>
+		</p>
 	</div>
 		<ul id="post">
