maj verif login

--- a/views/avatar.html
+++ b/views/avatar.html
@@ -1,3 +1,3 @@
 <p>
-	Connect&eacute; en tant que <?php echo $_SESSION['login'] ;?>
+	Connect&eacute; en tant que <?php echo htmlentities($_SESSION['login']) ;?>
 </p>
