--- a/views/themes.html
+++ b/views/themes.html
@@ -1,1 +1,1 @@
-<li attrid="<?php echo $listTheme[$i]->getId();?>"><?php echo $listTheme[$i]->getName();?></li>
+<li attrid="<?php echo htmlentities($listTheme[$i]->getId());?>"><?php echo htmlentities($listTheme[$i]->getName());?></li>
