--- a/views/content.html
+++ b/views/content.html
@@ -17,6 +17,7 @@
 	<div id="content-container">
 		<div id="main-content">
 			<div id="contenu">
+				<?php include "views/accueil.html"; ?>
 			</div>
 		</div><!--
 	 --><aside id="pub">
@@ -31,6 +32,14 @@
 				</div>
 				<h6>Si vous aussi vous avez trouvé l'Amour grâce à Dr. Love, envoyez vos photos à <a href="mailto:docteur@love.com">docteur@love.com</a></h6>
 	 		</section>
+	 		<section>
+	 			<h3>Publicit&eacute;</h3>
+	 			<img src="sources/images/illustrations/pub.gif"/>
+	 		</section>
+	 		<section>
+	 			<h3>Faites un don</h3>
+	 			<img src="sources/images/illustrations/don.jpg"/>
+	 		</section> 		
 		</aside>
 	</div>
 
