--- a/views/skel.html
+++ b/views/skel.html
@@ -10,11 +10,14 @@
 		<script src="sources/jquery.js"></script>
 		<script src="sources/jquery.flexslider-min.js"></script>
 		<script src="sources/script.js"></script>
-		<script>
-			$(window).load(function() {$('.flexslider').flexslider({animation: "slide"});});
-		</script>
+        <script type='text/javascript'>
+        // SCRIPT SLIDER
+			$(window).load(function() {
+				$('.flexslider').flexslider({animation: "slide"});
+			});
+        </script>
 	</head>
 <body>
-	<?php require("controllers/content.php"); ?>	
+	<?php require("controllers/content.php"); ?>
 </body>
 </html>	
